--- a/crap.css
+++ b/crap.css
@@ -1,16 +1,16 @@
-body{
-	background-color: black;
-	}
-h1{
-	color: white;
-	font-style : italic;
-	font-weight : bold;
-	text-decoration : wavy underline;
-	font-family : Lemon;
-}			
+body {
+    width: 100%;
+    height: 100vh;
+    margin: 0;
+    background-color: #1b1b32;
+    color: #f5f6f7
+}
 
-p{
-	color: #259efe;
-	font-family: Lemon, sans-serif;
-	font-size : 30px
-		 }
+label {
+    display: block;
+    margin: 0.5rem 0;
+}
+
+input[type="number"]::-webkit-inner-spin-button {
+    display: none;
+}
