--- a/crap.css
+++ b/crap.css
@@ -1,16 +1,55 @@
-body {
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    background-color: #1b1b32;
-    color: #f5f6f7
+.container {
+    margin: 100px auto;
+    width: 50vw;
+    height: 50vh;
+    border: 3px solid rgb(0, 2, 90);
+    border-radius: 10%;
+    max-width: 400px;
+    position: relative;
 }
 
-label {
+.logo {
+    margin: 10% 25%;
+}
+
+
+#cart {
+    width: 20vw;
+    height: 20vh;
+    max-width: 20vw;
+    max-height: 20vh;
+    min-width: 165px;
+    min-height: 138px;
+}
+
+.noto-sans {
+    font-family: "Noto Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-variation-settings:
+      "wdth" 100;
+  }
+
+.addElement {
+    width: 20%;
+    margin: 0 auto;
+    border: 2px solid lightcoral;
+    border-radius: 10px;
+    margin-bottom: 2%;
+    padding: 1%;
+}
+
+.addToCart {
+    width: 30%;
+    border: 2px solid lightcoral;
+    margin: 0 auto ;
+    border-radius: 10px;
+    margin-bottom: 2%;
+    padding: 1%;
+    min-width: 100px;
+}
+
+.toBlock {
     display: block;
-    margin: 0.5rem 0;
-}
-
-input[type="number"]::-webkit-inner-spin-button {
-    display: none;
 }
